Switch to bootstrap over fluent
I found the fluent ui documentation to be problematic and difficult.
Switching over to bootstrap as this appears to be more friendly for
me to try out.

--- a/src/components/TypingBar/TypingBar.scss
+++ b/src/components/TypingBar/TypingBar.scss
@@ -3,3 +3,13 @@
   width: 50%;
   padding-top: 1em;
 }
+
+.wrong {
+  border-color: red;
+  box-shadow: 0 0 0 0.2rem red;
+}
+
+.wrong:focus {
+  border-color: red;
+  box-shadow: 0 0 0 0.2rem red;
+}
